@@ -1,101 +1,81 @@
 package ru.testtask.walletapp.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import ru.testtask.walletapp.dto.RequestDto;
-import ru.testtask.walletapp.dto.ResponseDto;
-import ru.testtask.walletapp.exceptions.InvalidOperationTypeException;
+import ru.testtask.walletapp.exceptions.NotFoundException;
 import ru.testtask.walletapp.model.OperationType;
 import ru.testtask.walletapp.model.Wallet;
 import ru.testtask.walletapp.service.WalletServiceImpl;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
-import static org.hamcrest.Matchers.hasSize;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(WalletController.class)
 public class WalletControllerTest {
     @Autowired
     private MockMvc mockMvc;
 
-    @Mock
-    private WalletServiceImpl service;
-
-    @InjectMocks
-    private WalletController controller;
-
-    @Autowired
-    private ObjectMapper objectMapper;
-
-    private UUID walletId;
-    private RequestDto requestDto;
-
-    @BeforeEach
-    public void setUp() {
-        MockitoAnnotations.openMocks(this);
-        walletId = UUID.randomUUID();
-        requestDto = new RequestDto(walletId, OperationType.DEPOSIT, 100L);
-    }
+    @MockBean
+    private WalletServiceImpl walletService;
 
     @Test
     public void testGetAllWallets() throws Exception {
-        // Arrange
-        when(service.findAllWallets()).thenReturn(List.of(new Wallet(), new Wallet()));  // Мокаем результат
+        UUID walletId1 = UUID.randomUUID();
+        UUID walletId2 = UUID.randomUUID();
+        Wallet wallet1 = new Wallet(walletId1, 1000.0);
+        Wallet wallet2 = new Wallet(walletId2, 2000.0);
+        List<Wallet> walletList = Arrays.asList(wallet1, wallet2);
 
-        // Act & Assert
-        mockMvc.perform(get("/api/v1/wallets"))
+        when(walletService.findAllWallets()).thenReturn(walletList);
+K
+        mockMvc.perform(get("/api/v1/wallets")
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(2)));  // Проверяем, что ответ содержит 2 кошелька
+                .andExpect(jsonPath("$.length()").value(2))
+                .andExpect(jsonPath("$[0].id").value(walletId1.toString()))
+                .andExpect(jsonPath("$[1].id").value(walletId2.toString()));
+    }
+    @Test
+    public void testUpdateBalance() throws Exception {
+        RequestDto request = new RequestDto();
+        request.setValletId(UUID.randomUUID());
+        request.setOperationType(OperationType.DEPOSIT);
+        request.setAmount(1000L);
+
+        mockMvc.perform(post("/api/v1/wallet")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"valletId\":\"" + request.getValletId() + "\",\"operationType\":\"DEPOSIT\",\"amount\":1000}"))
+                .andExpect(status().isOk());
     }
 
     @Test
     public void testGetWalletBalance() throws Exception {
-        // Arrange
-        ResponseDto responseDto = new ResponseDto(100.0);  // Пример баланса
-        when(service.findWalletById(walletId)).thenReturn(100.0);  // Мокаем результат
+        UUID walletId = UUID.randomUUID();
+        when(walletService.findWalletById(walletId)).thenReturn(1000.0);
 
-        // Act & Assert
-        mockMvc.perform(get("/api/v1/wallets/{WALLET_UUID}", walletId))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.balance").value(100.0));  // Проверяем, что баланс равен 100
+        mockMvc.perform(get("/api/v1/wallets/" + walletId))
+                .andExpect(status().isOk());
     }
 
     @Test
-    public void testUpdateBalance() throws Exception {
-        // Arrange
-        when(service.updateWalletBalance(any(RequestDto.class))).thenReturn("Баланс обновлён");  // Мокаем результат
+    public void testGetWalletBalanceNotFound() throws Exception {
+        UUID walletId = UUID.randomUUID();
+        doThrow(new NotFoundException("Wallet", "walletId", walletId)).when(walletService).findWalletById(walletId);
 
-        // Act & Assert
-        mockMvc.perform(post("/api/v1/wallet")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(requestDto)))  // Конвертируем RequestDto в JSON
-                .andExpect(status().isOk())
-                .andExpect(content().string("Баланс обновлён"));  // Проверяем, что ответ правильный
-    }
-
-    @Test
-    public void testUpdateBalanceInvalidOperation() throws Exception {
-        // Arrange
-        RequestDto invalidRequestDto = new RequestDto(walletId, null, 100L);  // Невалидная операция
-        when(service.updateWalletBalance(any(RequestDto.class))).thenThrow(new InvalidOperationTypeException("Неверный тип операции"));
-
-        // Act & Assert
-        mockMvc.perform(post("/api/v1/wallet")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidRequestDto)))  // Конвертируем RequestDto в JSON
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.message").value("Неверный тип операции"));  // Проверяем, что ошибка была выброшена с правильным сообщением
+        mockMvc.perform(get("/api/v1/wallets/" + walletId))
+                .andExpect(status().isNotFound());
     }
 }
